# winch-daemon

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: advisor.rs  config.rs  drift.rs  fingerprint.rs  intent.rs  main.rs  notifier.rs  orchestrator.rs  resolver.rs  structure.rs  system_monitor.rs  version_map.rs  workspace.rs
src/daemon/: errors.rs  graph.rs  mod.rs  scheduler.rs  state.rs
