[package]
name = "winch_daemon"
version = "0.3.0"
edition = "2021"
authors = ["adminx <adminx@example.com>"]
description = "Winch Rust System-Wide Dependency Daemon"
license = "MIT"

[dependencies]
notify = "6.1"          # File system watcher
walkdir = "2.3"         # Recursive directory scanning
dirs = "5.0"            # Home directory expansion
anyhow = "1.0"          # Error handling
serde = { version = "1.0", features = ["derive"] }  # Config/serialization
twox-hash = "1.6"       # Fast hashing for files
regex = "1.10"          # Dependency parsing
toml = "0.7"            # Parsing Cargo.toml files
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
toml_edit = "0.23.7"
rusqlite = "0.37.0"
